Better powerlines, matugen terminal theme

--- a/ghostty/config
+++ b/ghostty/config
@@ -48,7 +48,12 @@
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
 
+confirm-close-surface = false
+
 font-family = JetBrains Mono Nerd Font
 theme = Atom One Dark
+cursor-style = bar
 background-opacity = 0.95
-confirm-close-surface = false
+window-padding-x = 10
+window-padding-y = 10
+window-padding-balance = true
