--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -18,3 +18,7 @@ output_path = '~/.config/rofi/colors.rasi'
 [templates.yazi]
 input_path = '~/.config/matugen/templates/yazi.toml'
 output_path = '~/.config/yazi/theme.toml'
+
+[templates.starship]
+input_path = '~/.config/matugen/templates/starship.toml'
+output_path = '~/.config/starship.toml'
