--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$background = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$background = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $error = rgba(ffb4abff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $error_container = rgba(93000aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$inverse_on_surface = rgba(2e3135ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_on_surface = rgba(2c322fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$inverse_primary = rgba(34618eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_primary = rgba(196b52ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$inverse_surface = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$inverse_surface = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_background = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_background = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $on_error = rgba(690005ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_primary = rgba(003257ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary = rgba(003829ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_primary_container = rgba(d1e4ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_container = rgba(a5f2d3ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_primary_fixed = rgba(001d35ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_fixed = rgba(002117ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_primary_fixed_variant = rgba(174974ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_primary_fixed_variant = rgba(00513dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_secondary = rgba(253140ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary = rgba(1e352cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_secondary_container = rgba(d6e4f7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_container = rgba(cee9dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_secondary_fixed = rgba(0f1c2bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_fixed = rgba(082018ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_secondary_fixed_variant = rgba(3b4858ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_secondary_fixed_variant = rgba(354c42ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_surface = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_surface = rgba(dee4dfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_surface_variant = rgba(c3c7cfff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_surface_variant = rgba(bfc9c3ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_tertiary = rgba(3a2948ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary = rgba(0a3445ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_tertiary_container = rgba(f1daffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_container = rgba(c2e8fdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_tertiary_fixed = rgba(241432ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_fixed = rgba(001e2bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$on_tertiary_fixed_variant = rgba(524060ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$on_tertiary_fixed_variant = rgba(264b5cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$outline = rgba(8c9199ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$outline = rgba(89938dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$outline_variant = rgba(42474eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$outline_variant = rgba(404944ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$primary = rgba(9fcafcff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$primary_container = rgba(174974ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_container = rgba(00513dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$primary_fixed = rgba(d1e4ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_fixed = rgba(a5f2d3ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$primary_fixed_dim = rgba(9fcafcff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$primary_fixed_dim = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $scrim = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$secondary = rgba(bac8dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary = rgba(b3ccc0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$secondary_container = rgba(3b4858ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_container = rgba(354c42ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$secondary_fixed = rgba(d6e4f7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_fixed = rgba(cee9dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$secondary_fixed_dim = rgba(bac8dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$secondary_fixed_dim = rgba(b3ccc0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
 $shadow = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$source_color = rgba(698bb2ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$source_color = rgba(309b7aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_bright = rgba(36393eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_bright = rgba(343b37ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_container = rgba(1d2024ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container = rgba(1b211eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_container_high = rgba(272a2fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_high = rgba(252b28ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_container_highest = rgba(32353aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_highest = rgba(303633ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_container_low = rgba(191c20ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_low = rgba(171d1aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_container_lowest = rgba(0b0e13ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_container_lowest = rgba(0a0f0dff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_dim = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_dim = rgba(0f1512ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_tint = rgba(9fcafcff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_tint = rgba(8ad6b8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$surface_variant = rgba(42474eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$surface_variant = rgba(404944ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$tertiary = rgba(d6bee5ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary = rgba(a7cce0ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$tertiary_container = rgba(524060ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_container = rgba(264b5cff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$tertiary_fixed = rgba(f1daffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_fixed = rgba(c2e8fdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cyberpunk car.png
-$tertiary_fixed_dim = rgba(d6bee5ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$tertiary_fixed_dim = rgba(a7cce0ff)
 
