Better clipboard management

--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$background = rgba(0f1512ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$background = rgba(101418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $error = rgba(ffb4abff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $error_container = rgba(93000aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$inverse_on_surface = rgba(2c322fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$inverse_on_surface = rgba(2d3135ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$inverse_primary = rgba(196b52ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$inverse_primary = rgba(2d638bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$inverse_surface = rgba(dee4dfff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$inverse_surface = rgba(e0e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_background = rgba(dee4dfff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_background = rgba(e0e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $on_error = rgba(690005ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_primary = rgba(003829ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_primary = rgba(003351ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_primary_container = rgba(a5f2d3ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_primary_container = rgba(cde5ffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_primary_fixed = rgba(002117ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_primary_fixed = rgba(001d32ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_primary_fixed_variant = rgba(00513dff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_primary_fixed_variant = rgba(094b72ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_secondary = rgba(1e352cff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_secondary = rgba(23323fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_secondary_container = rgba(cee9dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_secondary_container = rgba(d4e4f6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_secondary_fixed = rgba(082018ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_secondary_fixed = rgba(0d1d2aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_secondary_fixed_variant = rgba(354c42ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_secondary_fixed_variant = rgba(394857ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_surface = rgba(dee4dfff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_surface = rgba(e0e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_surface_variant = rgba(bfc9c3ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_surface_variant = rgba(c2c7ceff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_tertiary = rgba(0a3445ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_tertiary = rgba(382a4aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_tertiary_container = rgba(c2e8fdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_tertiary_container = rgba(eddcffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_tertiary_fixed = rgba(001e2bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_tertiary_fixed = rgba(221533ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$on_tertiary_fixed_variant = rgba(264b5cff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$on_tertiary_fixed_variant = rgba(4f4061ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$outline = rgba(89938dff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$outline = rgba(8c9198ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$outline_variant = rgba(404944ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$outline_variant = rgba(42474eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$primary = rgba(8ad6b8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$primary = rgba(99ccfaff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$primary_container = rgba(00513dff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$primary_container = rgba(094b72ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$primary_fixed = rgba(a5f2d3ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$primary_fixed = rgba(cde5ffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$primary_fixed_dim = rgba(8ad6b8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$primary_fixed_dim = rgba(99ccfaff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $scrim = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$secondary = rgba(b3ccc0ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$secondary = rgba(b8c8daff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$secondary_container = rgba(354c42ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$secondary_container = rgba(394857ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$secondary_fixed = rgba(cee9dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$secondary_fixed = rgba(d4e4f6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$secondary_fixed_dim = rgba(b3ccc0ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$secondary_fixed_dim = rgba(b8c8daff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
 $shadow = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$source_color = rgba(309b7aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$source_color = rgba(406788ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface = rgba(0f1512ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface = rgba(101418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_bright = rgba(343b37ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_bright = rgba(36393eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_container = rgba(1b211eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_container = rgba(1c2024ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_container_high = rgba(252b28ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_container_high = rgba(272a2eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_container_highest = rgba(303633ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_container_highest = rgba(313539ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_container_low = rgba(171d1aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_container_low = rgba(181c20ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_container_lowest = rgba(0a0f0dff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_container_lowest = rgba(0b0f12ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_dim = rgba(0f1512ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_dim = rgba(101418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_tint = rgba(8ad6b8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_tint = rgba(99ccfaff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$surface_variant = rgba(404944ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$surface_variant = rgba(42474eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$tertiary = rgba(a7cce0ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$tertiary = rgba(d2bfe7ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$tertiary_container = rgba(264b5cff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$tertiary_container = rgba(4f4061ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$tertiary_fixed = rgba(c2e8fdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$tertiary_fixed = rgba(eddcffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/cat.png
-$tertiary_fixed_dim = rgba(a7cce0ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$tertiary_fixed_dim = rgba(d2bfe7ff)
 
