--- a/hypr/programs.conf
+++ b/hypr/programs.conf
@@ -10,6 +10,8 @@ $flare = /usr/share/flare/flare_0.1.0_amd64.AppImage
 
 exec-once = swww-daemon
 exec-once = ~/.config/dotfiles/scripts/random-wallpaper.sh -no-animation
+exec-once = sleep 0.8 && hyprlock
+exec-once = sunshine
 exec-once = waybar
 exec-once = syncthing --no-browser
 exec-once = wl-paste --watch clipvault store
