--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$background = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$background = rgba(111418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $error = rgba(ffb4abff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $error_container = rgba(93000aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$inverse_on_surface = rgba(2d3135ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$inverse_on_surface = rgba(2e3135ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$inverse_primary = rgba(2d638bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$inverse_primary = rgba(35618eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$inverse_surface = rgba(e0e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$inverse_surface = rgba(e1e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_background = rgba(e0e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_background = rgba(e1e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $on_error = rgba(690005ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_primary = rgba(003351ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_primary = rgba(003258ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_primary_container = rgba(cde5ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_primary_container = rgba(d1e4ffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_primary_fixed = rgba(001d32ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_primary_fixed = rgba(001d36ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_primary_fixed_variant = rgba(094b72ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_primary_fixed_variant = rgba(194975ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_secondary = rgba(23323fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_secondary = rgba(253140ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_secondary_container = rgba(d4e4f6ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_secondary_container = rgba(d6e3f7ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_secondary_fixed = rgba(0d1d2aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_secondary_fixed = rgba(101c2bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_secondary_fixed_variant = rgba(394857ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_secondary_fixed_variant = rgba(3b4858ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_surface = rgba(e0e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_surface = rgba(e1e2e8ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_surface_variant = rgba(c2c7ceff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_surface_variant = rgba(c3c7cfff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_tertiary = rgba(382a4aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_tertiary = rgba(3b2948ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_tertiary_container = rgba(eddcffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_tertiary_container = rgba(f2daffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_tertiary_fixed = rgba(221533ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_tertiary_fixed = rgba(251432ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$on_tertiary_fixed_variant = rgba(4f4061ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$on_tertiary_fixed_variant = rgba(523f5fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$outline = rgba(8c9198ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$outline = rgba(8d9199ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $outline_variant = rgba(42474eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$primary = rgba(99ccfaff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$primary = rgba(a0cafdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$primary_container = rgba(094b72ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$primary_container = rgba(194975ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$primary_fixed = rgba(cde5ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$primary_fixed = rgba(d1e4ffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$primary_fixed_dim = rgba(99ccfaff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$primary_fixed_dim = rgba(a0cafdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $scrim = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$secondary = rgba(b8c8daff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$secondary = rgba(bbc7dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$secondary_container = rgba(394857ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$secondary_container = rgba(3b4858ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$secondary_fixed = rgba(d4e4f6ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$secondary_fixed = rgba(d6e3f7ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$secondary_fixed_dim = rgba(b8c8daff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$secondary_fixed_dim = rgba(bbc7dbff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $shadow = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$source_color = rgba(406788ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$source_color = rgba(79afecff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface = rgba(111418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $surface_bright = rgba(36393eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_container = rgba(1c2024ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_container = rgba(1d2024ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_container_high = rgba(272a2eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_container_high = rgba(272a2fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_container_highest = rgba(313539ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_container_highest = rgba(32353aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_container_low = rgba(181c20ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_container_low = rgba(191c20ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_container_lowest = rgba(0b0f12ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_container_lowest = rgba(0b0e13ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_dim = rgba(101418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_dim = rgba(111418ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$surface_tint = rgba(99ccfaff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$surface_tint = rgba(a0cafdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
 $surface_variant = rgba(42474eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$tertiary = rgba(d2bfe7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$tertiary = rgba(d6bee4ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$tertiary_container = rgba(4f4061ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$tertiary_container = rgba(523f5fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$tertiary_fixed = rgba(eddcffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$tertiary_fixed = rgba(f2daffff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/hollow knight.jpg
-$tertiary_fixed_dim = rgba(d2bfe7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$tertiary_fixed_dim = rgba(d6bee4ff)
 
