--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -25,6 +25,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = , Print, exec, grimblast copysave output ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%M-%S').png
 bind = SHIFT, Print, exec, grimblast copysave area ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%M-%S').png
 bind = ALT, Print, exec, grimblast -f copysave area ~/Pictures/Screenshots/$(date +'%Y-%m-%d_%H-%M-%S').png
+bind = $mainMod, O, exec, ~/Scripts/internal/OCR.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
