--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -1,11 +1,11 @@
 # : Manager [[[
 
-[manager]
-cwd = { fg = "#e0e2e8" }
+[mgr]
+cwd = { fg = "#e1e2e8" }
 
 # Tab
-tab_active = { fg = "#003351", bg = "#99ccfa", bold = true }
-tab_inactive = { fg = "#cde5ff", bg = "#001d32" }
+tab_active = { fg = "#003258", bg = "#a0cafd", bold = true }
+tab_inactive = { fg = "#d1e4ff", bg = "#001d36" }
 tab_width = 1
 
 # Find
@@ -13,19 +13,19 @@ find_keyword = { fg = "#ffb4ab", bold = true, italic = true, underline = true }
 find_position = { fg = "#ffb4ab", bold = true, italic = true }
 
 # Marker
-marker_copied = { fg = "#b976ff", bg = "#b976ff" }
-marker_cut = { fg = "#eddcff", bg = "#eddcff" }
+marker_copied = { fg = "#ce74ff", bg = "#ce74ff" }
+marker_cut = { fg = "#f2daff", bg = "#f2daff" }
 marker_marked = { fg = "#ffb4ab", bg = "#ffb4ab" }
-marker_selected = { fg = "#d2bfe7", bg = "#d2bfe7" }
+marker_selected = { fg = "#d6bee4", bg = "#d6bee4" }
 
 # Count
-count_copied = { fg = "#221533", bg = "#eddcff" }
-count_cut = { fg = "#221533", bg = "#eddcff" }
-count_selected = { fg = "#003351", bg = "#d2bfe7" }
+count_copied = { fg = "#251432", bg = "#f2daff" }
+count_cut = { fg = "#251432", bg = "#f2daff" }
+count_selected = { fg = "#003258", bg = "#d6bee4" }
 
 # Border
 border_symbol = "│"
-border_style  = { fg = "#99ccfa" }
+border_style  = { fg = "#a0cafd" }
 
 # : ]]]
 
@@ -35,32 +35,32 @@ border_style  = { fg = "#99ccfa" }
 [status]
 separator_open = "🭁"
 separator_close = "🭠"
-separator_style = { bg = "#003351", fg = "#F4A261" }
+separator_style = { bg = "#003258", fg = "#F4A261" }
 
 [mode]
 # Mode
-normal_main = { bg = "#99ccfa", fg = "#003351", bold = true }
-normal_alt  = { bg = "#42474e", fg = "#c2c7ce" }
+normal_main = { bg = "#a0cafd", fg = "#003258", bold = true }
+normal_alt  = { bg = "#42474e", fg = "#c3c7cf" }
 
 # Select mode
-select_main = { bg = "#b8c8da", fg = "#23323f", bold = true }
-select_alt  = { bg = "#42474e", fg = "#c2c7ce" }
+select_main = { bg = "#bbc7db", fg = "#253140", bold = true }
+select_alt  = { bg = "#42474e", fg = "#c3c7cf" }
 
 # Unset mode
-unset_main = { bg = "#d2bfe7", fg = "#382a4a", bold = true }
-unset_alt  = { bg = "#42474e", fg = "#c2c7ce" }
+unset_main = { bg = "#d6bee4", fg = "#3b2948", bold = true }
+unset_alt  = { bg = "#42474e", fg = "#c3c7cf" }
 
 # Progress
 progress_label = { bold = true }
-progress_normal = { fg = "#99ccfa", bg = "#36393e" }
+progress_normal = { fg = "#a0cafd", bg = "#36393e" }
 progress_error = { fg = "#ffb4ab", bg = "#36393e" }
 
 # Permissions
-permissions_t = { fg = "#557aa4" }
-permissions_w = { fg = "#8450bd" }
+permissions_t = { fg = "#5875a5" }
+permissions_w = { fg = "#9252b7" }
 permissions_x = { fg = "#ff2b12" }
-permissions_r = { fg = "#9e43ff" }
-permissions_s = { fg = "#3495ff" }
+permissions_r = { fg = "#bc41ff" }
+permissions_s = { fg = "#388aff" }
 
 # : ]]]
 
@@ -68,8 +68,8 @@ permissions_s = { fg = "#3495ff" }
 # : Select [[[
 
 [select]
-border = { fg = "#99ccfa" }
-active = { fg = "#d2bfe7", bold = true }
+border = { fg = "#a0cafd" }
+active = { fg = "#d6bee4", bold = true }
 inactive = {}
 
 # : ]]]
@@ -78,8 +78,8 @@ inactive = {}
 # : Input [[[
 
 [input]
-border = { fg = "#99ccfa" }
-value = { fg = "#e0e2e8" }
+border = { fg = "#a0cafd" }
+value = { fg = "#e1e2e8" }
 
 # : ]]]
 
@@ -87,7 +87,7 @@ value = { fg = "#e0e2e8" }
 # : Completion [[[
 
 [completion]
-border = { fg = "#99ccfa", bg = "#003351" }
+border = { fg = "#a0cafd", bg = "#003258" }
 
 # : ]]]
 
@@ -95,9 +95,9 @@ border = { fg = "#99ccfa", bg = "#003351" }
 # : Tasks [[[
 
 [tasks]
-border = { fg = "#99ccfa" }
+border = { fg = "#a0cafd" }
 title = {}
-hovered = { fg = "#eddcff", underline = true }
+hovered = { fg = "#f2daff", underline = true }
 
 # : ]]]
 
@@ -107,11 +107,11 @@ hovered = { fg = "#eddcff", underline = true }
 [which]
 cols = 3
 mask = { bg = "#36393e" }
-cand = { fg = "#99ccfa" }
-rest = { fg = "#003351" }
-desc = { fg = "#e0e2e8" }
+cand = { fg = "#a0cafd" }
+rest = { fg = "#003258" }
+desc = { fg = "#e1e2e8" }
 separator = " ▶ "
-separator_style = { fg = "#e0e2e8" }
+separator_style = { fg = "#e1e2e8" }
 
 # : ]]]
 
@@ -119,9 +119,9 @@ separator_style = { fg = "#e0e2e8" }
 # : Help [[[
 
 [help]
-on = { fg = "#e0e2e8" }
-run = { fg = "#e0e2e8" }
-footer = { fg = "#23323f", bg = "#b8c8da" }
+on = { fg = "#e1e2e8" }
+run = { fg = "#e1e2e8" }
+footer = { fg = "#253140", bg = "#bbc7db" }
 
 # : ]]]
 
@@ -129,8 +129,8 @@ footer = { fg = "#23323f", bg = "#b8c8da" }
 # : Notify [[[
 
 [notify]
-title_info = { fg = "#d2bfe7" }
-title_warn = { fg = "#99ccfa" }
+title_info = { fg = "#d6bee4" }
+title_warn = { fg = "#a0cafd" }
 title_error = { fg = "#ffb4ab" }
 
 # : ]]]
@@ -158,8 +158,8 @@ rules = [
     { name = "*", is = "exec", fg = "#ffdad6" },
 
     # Fallback
-    { name = "*", fg = "#e0e2e8" },
-    { name = "*/", fg = "#99ccfa" },
+    { name = "*", fg = "#e1e2e8" },
+    { name = "*/", fg = "#a0cafd" },
 ]
 
 # : ]]]
