Better notification styling, some tweaks

--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,151 +1,151 @@
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$background = rgba(111418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$background = rgba(18130bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $error = rgba(ffb4abff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $error_container = rgba(93000aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$inverse_on_surface = rgba(2e3135ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$inverse_on_surface = rgba(362f27ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$inverse_primary = rgba(35618eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$inverse_primary = rgba(7e570fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$inverse_surface = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$inverse_surface = rgba(ede1d4ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_background = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_background = rgba(ede1d4ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $on_error = rgba(690005ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $on_error_container = rgba(ffdad6ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_primary = rgba(003258ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_primary = rgba(442b00ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_primary_container = rgba(d1e4ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_primary_container = rgba(ffddb1ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_primary_fixed = rgba(001d36ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_primary_fixed = rgba(291800ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_primary_fixed_variant = rgba(194975ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_primary_fixed_variant = rgba(614000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_secondary = rgba(253140ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_secondary = rgba(3d2e16ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_secondary_container = rgba(d6e3f7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_secondary_container = rgba(fadebcff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_secondary_fixed = rgba(101c2bff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_secondary_fixed = rgba(271904ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_secondary_fixed_variant = rgba(3b4858ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_secondary_fixed_variant = rgba(56442aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_surface = rgba(e1e2e8ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_surface = rgba(ede1d4ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_surface_variant = rgba(c3c7cfff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_surface_variant = rgba(d3c4b4ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_tertiary = rgba(3b2948ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_tertiary = rgba(233516ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_tertiary_container = rgba(f2daffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_tertiary_container = rgba(d3eabdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_tertiary_fixed = rgba(251432ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_tertiary_fixed = rgba(0f2004ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$on_tertiary_fixed_variant = rgba(523f5fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$on_tertiary_fixed_variant = rgba(394c2bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$outline = rgba(8d9199ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$outline = rgba(9b8f80ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$outline_variant = rgba(42474eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$outline_variant = rgba(4f4539ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$primary = rgba(a0cafdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$primary = rgba(f3bd6eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$primary_container = rgba(194975ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$primary_container = rgba(614000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$primary_fixed = rgba(d1e4ffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$primary_fixed = rgba(ffddb1ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$primary_fixed_dim = rgba(a0cafdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$primary_fixed_dim = rgba(f3bd6eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $scrim = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$secondary = rgba(bbc7dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$secondary = rgba(dcc3a1ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$secondary_container = rgba(3b4858ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$secondary_container = rgba(56442aff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$secondary_fixed = rgba(d6e3f7ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$secondary_fixed = rgba(fadebcff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$secondary_fixed_dim = rgba(bbc7dbff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$secondary_fixed_dim = rgba(dcc3a1ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
 $shadow = rgba(000000ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$source_color = rgba(79afecff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$source_color = rgba(9b8b77ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface = rgba(111418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface = rgba(18130bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_bright = rgba(36393eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_bright = rgba(3f382fff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_container = rgba(1d2024ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_container = rgba(251f17ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_container_high = rgba(272a2fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_container_high = rgba(2f2921ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_container_highest = rgba(32353aff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_container_highest = rgba(3a342bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_container_low = rgba(191c20ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_container_low = rgba(201b13ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_container_lowest = rgba(0b0e13ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_container_lowest = rgba(120d07ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_dim = rgba(111418ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_dim = rgba(18130bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_tint = rgba(a0cafdff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_tint = rgba(f3bd6eff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$surface_variant = rgba(42474eff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$surface_variant = rgba(4f4539ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$tertiary = rgba(d6bee4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$tertiary = rgba(b7cea2ff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$tertiary_container = rgba(523f5fff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$tertiary_container = rgba(394c2bff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$tertiary_fixed = rgba(f2daffff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$tertiary_fixed = rgba(d3eabdff)
 
-$image = /home/spacefren/.config/dotfiles/wallpapers/snow cabin.jpg
-$tertiary_fixed_dim = rgba(d6bee4ff)
+$image = /home/spacefren/.config/dotfiles/wallpapers/expedition 33.jpeg
+$tertiary_fixed_dim = rgba(b7cea2ff)
 
