--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -22,3 +22,8 @@ output_path = '~/.config/yazi/theme.toml'
 [templates.starship]
 input_path = '~/.config/matugen/templates/starship.toml'
 output_path = '~/.config/starship.toml'
+
+[templates.dunst]
+input_path = '~/.config/matugen/templates/dunstrc'
+output_path = '~/.config/dunst/dunstrc'
+post_hook = 'dunstctl reload'
