--- a/yazi/theme.toml
+++ b/yazi/theme.toml
@@ -1,11 +1,11 @@
 # : Manager [[[
 
-[mgr]
-cwd = { fg = "#e1e2e8" }
+[manager]
+cwd = { fg = "#ede1d4" }
 
 # Tab
-tab_active = { fg = "#003258", bg = "#a0cafd", bold = true }
-tab_inactive = { fg = "#d1e4ff", bg = "#001d36" }
+tab_active = { fg = "#442b00", bg = "#f3bd6e", bold = true }
+tab_inactive = { fg = "#ffddb1", bg = "#291800" }
 tab_width = 1
 
 # Find
@@ -13,19 +13,19 @@ find_keyword = { fg = "#ffb4ab", bold = true, italic = true, underline = true }
 find_position = { fg = "#ffb4ab", bold = true, italic = true }
 
 # Marker
-marker_copied = { fg = "#ce74ff", bg = "#ce74ff" }
-marker_cut = { fg = "#f2daff", bg = "#f2daff" }
+marker_copied = { fg = "#9fd170", bg = "#9fd170" }
+marker_cut = { fg = "#d3eabd", bg = "#d3eabd" }
 marker_marked = { fg = "#ffb4ab", bg = "#ffb4ab" }
-marker_selected = { fg = "#d6bee4", bg = "#d6bee4" }
+marker_selected = { fg = "#b7cea2", bg = "#b7cea2" }
 
 # Count
-count_copied = { fg = "#251432", bg = "#f2daff" }
-count_cut = { fg = "#251432", bg = "#f2daff" }
-count_selected = { fg = "#003258", bg = "#d6bee4" }
+count_copied = { fg = "#0f2004", bg = "#d3eabd" }
+count_cut = { fg = "#0f2004", bg = "#d3eabd" }
+count_selected = { fg = "#442b00", bg = "#b7cea2" }
 
 # Border
 border_symbol = "│"
-border_style  = { fg = "#a0cafd" }
+border_style  = { fg = "#f3bd6e" }
 
 # : ]]]
 
@@ -35,32 +35,32 @@ border_style  = { fg = "#a0cafd" }
 [status]
 separator_open = "🭁"
 separator_close = "🭠"
-separator_style = { bg = "#003258", fg = "#F4A261" }
+separator_style = { bg = "#442b00", fg = "#F4A261" }
 
 [mode]
 # Mode
-normal_main = { bg = "#a0cafd", fg = "#003258", bold = true }
-normal_alt  = { bg = "#42474e", fg = "#c3c7cf" }
+normal_main = { bg = "#f3bd6e", fg = "#442b00", bold = true }
+normal_alt  = { bg = "#4f4539", fg = "#d3c4b4" }
 
 # Select mode
-select_main = { bg = "#bbc7db", fg = "#253140", bold = true }
-select_alt  = { bg = "#42474e", fg = "#c3c7cf" }
+select_main = { bg = "#dcc3a1", fg = "#3d2e16", bold = true }
+select_alt  = { bg = "#4f4539", fg = "#d3c4b4" }
 
 # Unset mode
-unset_main = { bg = "#d6bee4", fg = "#3b2948", bold = true }
-unset_alt  = { bg = "#42474e", fg = "#c3c7cf" }
+unset_main = { bg = "#b7cea2", fg = "#233516", bold = true }
+unset_alt  = { bg = "#4f4539", fg = "#d3c4b4" }
 
 # Progress
 progress_label = { bold = true }
-progress_normal = { fg = "#a0cafd", bg = "#36393e" }
-progress_error = { fg = "#ffb4ab", bg = "#36393e" }
+progress_normal = { fg = "#f3bd6e", bg = "#3f382f" }
+progress_error = { fg = "#ffb4ab", bg = "#3f382f" }
 
 # Permissions
-permissions_t = { fg = "#5875a5" }
-permissions_w = { fg = "#9252b7" }
+permissions_t = { fg = "#a67a3e" }
+permissions_w = { fg = "#6a8d4a" }
 permissions_x = { fg = "#ff2b12" }
-permissions_r = { fg = "#bc41ff" }
-permissions_s = { fg = "#388aff" }
+permissions_r = { fg = "#86c549" }
+permissions_s = { fg = "#ff9a18" }
 
 # : ]]]
 
@@ -68,8 +68,8 @@ permissions_s = { fg = "#388aff" }
 # : Select [[[
 
 [select]
-border = { fg = "#a0cafd" }
-active = { fg = "#d6bee4", bold = true }
+border = { fg = "#f3bd6e" }
+active = { fg = "#b7cea2", bold = true }
 inactive = {}
 
 # : ]]]
@@ -78,8 +78,8 @@ inactive = {}
 # : Input [[[
 
 [input]
-border = { fg = "#a0cafd" }
-value = { fg = "#e1e2e8" }
+border = { fg = "#f3bd6e" }
+value = { fg = "#ede1d4" }
 
 # : ]]]
 
@@ -87,7 +87,7 @@ value = { fg = "#e1e2e8" }
 # : Completion [[[
 
 [completion]
-border = { fg = "#a0cafd", bg = "#003258" }
+border = { fg = "#f3bd6e", bg = "#442b00" }
 
 # : ]]]
 
@@ -95,9 +95,9 @@ border = { fg = "#a0cafd", bg = "#003258" }
 # : Tasks [[[
 
 [tasks]
-border = { fg = "#a0cafd" }
+border = { fg = "#f3bd6e" }
 title = {}
-hovered = { fg = "#f2daff", underline = true }
+hovered = { fg = "#d3eabd", underline = true }
 
 # : ]]]
 
@@ -106,12 +106,12 @@ hovered = { fg = "#f2daff", underline = true }
 
 [which]
 cols = 3
-mask = { bg = "#36393e" }
-cand = { fg = "#a0cafd" }
-rest = { fg = "#003258" }
-desc = { fg = "#e1e2e8" }
+mask = { bg = "#3f382f" }
+cand = { fg = "#f3bd6e" }
+rest = { fg = "#442b00" }
+desc = { fg = "#ede1d4" }
 separator = " ▶ "
-separator_style = { fg = "#e1e2e8" }
+separator_style = { fg = "#ede1d4" }
 
 # : ]]]
 
@@ -119,9 +119,9 @@ separator_style = { fg = "#e1e2e8" }
 # : Help [[[
 
 [help]
-on = { fg = "#e1e2e8" }
-run = { fg = "#e1e2e8" }
-footer = { fg = "#253140", bg = "#bbc7db" }
+on = { fg = "#ede1d4" }
+run = { fg = "#ede1d4" }
+footer = { fg = "#3d2e16", bg = "#dcc3a1" }
 
 # : ]]]
 
@@ -129,8 +129,8 @@ footer = { fg = "#253140", bg = "#bbc7db" }
 # : Notify [[[
 
 [notify]
-title_info = { fg = "#d6bee4" }
-title_warn = { fg = "#a0cafd" }
+title_info = { fg = "#b7cea2" }
+title_warn = { fg = "#f3bd6e" }
 title_error = { fg = "#ffb4ab" }
 
 # : ]]]
@@ -158,8 +158,8 @@ rules = [
     { name = "*", is = "exec", fg = "#ffdad6" },
 
     # Fallback
-    { name = "*", fg = "#e1e2e8" },
-    { name = "*/", fg = "#a0cafd" },
+    { name = "*", fg = "#ede1d4" },
+    { name = "*/", fg = "#f3bd6e" },
 ]
 
 # : ]]]
